# stata-cli

./: .gitignore  CHANGELOG.md  README.md  README.zh.md  SKILL.md  package.json  pyproject.toml
docs/: index.html
src/stata_cli/: __main__.py  daemon.py  engine.py  graph_artifacts.py  main.py  output_filter.py  skill_registry.py  smcl_parser.py  utils.py
src/stata_cli/skills/: overview.md
